Fix bg css var. Update landing dark mode background hex.

--- a/assets/stylesheets/new-stylesheets/pages/_get-started.scss
+++ b/assets/stylesheets/new-stylesheets/pages/_get-started.scss
@@ -810,7 +810,7 @@
     border-radius: 22px;
     overflow: hidden;
     pre.highlight {
-      background: var(--get-started-code-primary-bg);
+      background: var(--get-started-card-primary-bg);
     }
   }
 
